# MISIS_OOP_2_sem

Rational/Rational/: CMakeLists.txt  main.cpp
Rational/Rational/rational/: CmakeLists.txt  rational.cpp  rational.h
shestakov_n_a/: .gitignore  CMakeLists.txt
shestakov_n_a/example/: CMakeLists.txt  main.cpp
shestakov_n_a/latex/: annotated.tex  dir_54301b3bc1997a8be1c248cda62e06f7.tex  dir_a23daffb449a40fee5f4f3f08baabd62.tex  files.tex  niblack_8cpp.tex  niblack_8hpp_source.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out
shestakov_n_a/niblack/: CMakeLists.txt  niblack.cpp
shestakov_n_a/prj.cw/: CMakeLists.txt  Doxyfile  course_test.cpp
shestakov_n_a/prj.cw/check/: CMakeLists.txt  niblack_test.cpp
shestakov_n_a/prj.cw/cmake/: build_prefix.cmake  niblackConfig.cmake.in
shestakov_n_a/prj.cw/docs/: Doxyfile.in
shestakov_n_a/prj.cw/docs/html/: annotated.html  annotated_dup.js  class_niblack_binarization-members.html  class_niblack_binarization.html  class_niblack_binarization.js  classes.html  dir_54301b3bc1997a8be1c248cda62e06f7.html  dir_54301b3bc1997a8be1c248cda62e06f7.js  dir_a23daffb449a40fee5f4f3f08baabd62.html  dir_a23daffb449a40fee5f4f3f08baabd62.js  dir_db10495e7417f3bc2c598ce31f3a6d85.html  dir_db10495e7417f3bc2c598ce31f3a6d85.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  index.html  navtreedata.js  navtreeindex0.js  niblack_8cpp.html  niblack_8hpp.html  niblack_8hpp.js  niblack_8hpp_source.html
shestakov_n_a/prj.cw/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  classes_0.js  files_0.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
shestakov_n_a/prj.cw/docs/latex/: annotated.tex  class_niblack_binarization.tex  dir_db10495e7417f3bc2c598ce31f3a6d85.tex  files.tex  niblack_8hpp.tex  niblack_8hpp_source.tex  refman.tex  refman.toc
shestakov_n_a/prj.cw/example/: CMakeLists.txt  main.cpp
shestakov_n_a/prj.cw/niblack/: CMakeLists.txt  niblack.cpp
shestakov_n_a/prj.cw/niblack/include/niblack/: niblack.hpp
shestakov_n_a/prj.cw/src/: CMakeLists.txt
shestakov_n_a/prj.cw/src/example/: CMakeLists.txt  main.cpp
shestakov_n_a/prj.cw/src/niblack/: CMakeLists.txt  niblack.cpp
shestakov_n_a/prj.cw/src/niblack/include/niblack/: niblack.hpp
shestakov_n_a/prj.lab/: CMakeLists.txt
shestakov_n_a/prj.lab/arrayD/include/: CMakeLists.txt  array_d.cpp
shestakov_n_a/prj.lab/arrayD/include/arrayD/: arrayD.hpp
shestakov_n_a/prj.lab/arrayd/: arrayd.cpp
shestakov_n_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
shestakov_n_a/prj.lab/course/: CMakeLists.txt
shestakov_n_a/prj.lab/geo2d/: CMakeLists.txt
shestakov_n_a/prj.lab/geo2d/include/geo2d/: geo2d.hpp
shestakov_n_a/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
shestakov_n_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
shestakov_n_a/prj.lab/orto/: orto.20230519.txt  orto.20232405_upd.txt
shestakov_n_a/prj.lab/rational/: CMakeLists.txt  rational.cpp
shestakov_n_a/prj.lab/rational/include/rational/: rational.hpp
shestakov_n_a/prj.test/: CMakeLists.txt  array_d_test.cpp  arrayd_test.cpp  course_test.cpp  course_test_beta.cpp  geo2d_test.cpp  matrixs_test.cpp  rational_test.cpp
